-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 7u80, 9
-
Component/s: hotspot
-
b105
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8156269 | 8u111 | Andreas Eriksson | P4 | Resolved | Fixed | b01 |
| JDK-8141632 | 8u102 | Andreas Eriksson | P4 | Resolved | Fixed | b01 |
| JDK-8162066 | emb-8u111 | Unassigned | P4 | Resolved | Fixed | b01 |
| JDK-8146685 | 7u111 | Andreas Eriksson | P4 | Resolved | Fixed | b03 |
A debug build fails on an assert in heapDumper.cpp.
Test:
public static void main (String[] args) throws IOException {
long[] a = new long[268435456];
// Sleep here and initiate a heapdump, for example with jcmd <pid> GC.heap_dump /tmp/dump.hprof
Error:
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error ([...]/src/share/vm/services/heapDumper.cpp:1038)
# assert(length_in_bytes > 0) failed: nothing to copy
...
- backported by
-
JDK-8141632 heapDumper.cpp: assert(length_in_bytes > 0) failed: nothing to copy
-
- Resolved
-
-
JDK-8146685 heapDumper.cpp: assert(length_in_bytes > 0) failed: nothing to copy
-
- Resolved
-
-
JDK-8156269 heapDumper.cpp: assert(length_in_bytes > 0) failed: nothing to copy
-
- Resolved
-
-
JDK-8162066 heapDumper.cpp: assert(length_in_bytes > 0) failed: nothing to copy
-
- Resolved
-
- duplicates
-
JDK-8145119 jmap with zero length file hits VM assert
-
- Closed
-
-
JDK-8145091 JMAP fails to dump huge arrays
-
- Closed
-
-
JDK-8133317 Integer overflow in heapDumper.cpp leads to corrupt HPROF dumps
-
- Closed
-
- relates to
-
JDK-8149790 NegativeArraySizeException with hprof
-
- Resolved
-
-
JDK-8145091 JMAP fails to dump huge arrays
-
- Closed
-
-
JDK-8133317 Integer overflow in heapDumper.cpp leads to corrupt HPROF dumps
-
- Closed
-