8129419: heapDumper.cpp: assert(length_in_bytes > 0) failed: nothing to copy

Reviewed-by: dsamersoff